home page added
added home page and nav bar functionality for both pages

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- HTML for home page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,9 +12,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="index.html">Instagram</a></li>
-        <li><a href="">TikTok</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="insta-index.html">Instagram</a></li>
+        <li><a href="">Twitter</a></li>
         <li><a href="">Contact</a></li>
         <div class="search">
             <input type="text" class="input" placeholder="Search...">
@@ -21,21 +22,16 @@
               <i class="fas fa-search"></i>
             </button>
           </div>
-      </ul>
+    </ul>
+    <h1>Megan Marchetti</h1>
 
-    <h1>Instagram Hub</h1>
-    
-    <div class="box"><img src="p1.jpg"><a href="https://www.instagram.com/p/CWHMgDdlMEt/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p2.jpg"><a href="https://www.instagram.com/p/CTvRgkJFTy6/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p3.jpg"><a href="https://www.instagram.com/p/CS24HK5HhoD/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p4.jpg"><a href="https://www.instagram.com/p/CO6OgAplAHK/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p5.jpg"><a href="https://www.instagram.com/p/B9baLNZFyTr/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p6.jpg"><a href="https://www.instagram.com/p/B9Oj9KslROm/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p7.jpg"><a href="https://www.instagram.com/p/B1KdVd0lOIq/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p8.jpg"><a href="https://www.instagram.com/p/Bx3XtLqlYE4/" class="btn" target="_blank">See Full Post</a></div>
-    <div class="box"><img src="p9.jpg"><a href="https://www.instagram.com/p/BnM_YJdlY7Z/" class="btn" target="_blank">See Full Post</a></div>
+    <div class="content">
+        <img src="mm.jpg" alt="">
+    </div>
 
-    <div class="text"><p><a href="https://www.instagram.com/megan.marchetti/" target="_blank">Full Profile</a></div>
+    <div class="content">
+        <p>blah blah blah</p>
+    </div>
 
     <script src="script.js"></script>
 </body>
