--- a/spotify/spot-index.html
+++ b/spotify/spot-index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Hub</title>
-    <link rel="stylesheet" href="/src/spotify/spot-style.css">
+    <link rel="stylesheet" href="/spotify/spot-style.css">
     <link rel="icon" href="/pics/icon.JPG">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
 </head>
@@ -16,10 +16,10 @@
     <div class="nav">
         <div class="container">
             <ul>
-                <li><a href="/src/home/index.html">Home</a></li>
-                <li><a href="/src/instagram/insta-index.html">Instagram</a></li>
-                <li><a href="/src/spotify/spot-index.html">Spotify</a></li>
-                <li><a href="/src/contact/con-index.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/instagram/insta-index.html">Instagram</a></li>
+                <li><a href="/spotify/spot-index.html">Spotify</a></li>
+                <li><a href="/contact/con-index.html">Contact</a></li>
                 <li><div class="search">
                     <input type="text" class="input" placeholder="Search...">
                     <button class="butn">
@@ -143,7 +143,7 @@
         
     </div>
 
-    <script src="/src/spotify/spot-script.js"></script>
+    <script src="/spotify/spot-script.js"></script>
     
 </body>
 </html>
