--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/home/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="icon" href="/pics/icon.JPG">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
     <title>Social Media Hub</title>
@@ -15,10 +15,10 @@
     <div class="nav">
         <div class="container">
             <ul>
-                <li><a href="/src/home/index.html">Home</a></li>
-                <li><a href="/src/instagram/insta-index.html">Instagram</a></li>
-                <li><a href="/src/spotify/spot-index.html">Spotify</a></li>
-                <li><a href="/src/contact/con-index.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/instagram/insta-index.html">Instagram</a></li>
+                <li><a href="/spotify/spot-index.html">Spotify</a></li>
+                <li><a href="/contact/con-index.html">Contact</a></li>
                 <li><div class="search">
                     <input type="text" class="input" placeholder="Search...">
                     <button class="butn">
@@ -44,14 +44,14 @@
             <i class="fab fa-instagram fa-4x"><p>@megan.marchetti</p></i>
             <div class="counter" data-target="1503"></div>
             <span>Followers</span>
-            <a href="insta-index.html">View Posts</a>
+            <a href="/instagram/insta-index.html">View Posts</a>
         </div>
 
         <div class="counter-container">
             <i class="fab fa-spotify fa-4x"><p>meegan98</p></i>
             <div class="counter" id="ctr" data-target="42"></div>
             <span>Playlists</span>
-            <a href="spot-index.html">Take a Listen</a>
+            <a href="/spotify/spot-index.html">Take a Listen</a>
         </div>
     </div>
     <div class="content">
@@ -73,6 +73,6 @@
     
     
 
-    <script src="/src/home/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
